# trajector

./: .gitignore  README.md  README_ja.md  packages.txt  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
config/: config.yaml
src/: cli.py  web_app.py
src/core/: __init__.py  detector.py  tracker.py  visualizer.py
src/processors/: __init__.py  pipeline.py
src/sources/: __init__.py  base.py  video.py  webcam.py
tests/fixtures/: video_generator.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_detector.py  test_pipeline.py  test_sources.py  test_tracker.py
